# opengl-interstella

./: CMakeLists.txt  LICENSE  PartA.cpp  README.md  classes.h  general.h  main.cpp  p3.cbp  p3.depend  p3.layout
cl-p3/: Arc.cpp  Arc.h  Circle.h  ColoredFig.cpp  Ellipse.h  Game.cpp  Line.h  ParkingLot.h  Semi.h  draw.h
